manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/inlaid-contact-466616-g2/ip4repo/ip2backend:1.0.0
        ports:
        - containerPort: 5000
