manifests/frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip4service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
