manifests/mongoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip4service
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
