manifests/stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo # has to match .spec.template.metadata.labels
  serviceName: "mongo"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: mongo # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: mongo
        image: us-central1-docker.pkg.dev/inlaid-contact-466616-g2/ip4repo/mongo:1.0.0
        ports:
        - containerPort: 27017
          name: web
        volumeMounts:
        - name: mongo-pvc
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard 
      resources:
        requests:
          storage: 1Gi
